--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       var paypalButton = document.getElementById('paypal-button');
       paypalButton.addEventListener('click', function() {
-        alert('You can now send payment to my PayPal account: myusername');
+        alert('You can now send payment to my PayPal account: @tuansave');
       });
     });
   </script>
@@ -91,12 +91,12 @@
     </section>
     <section>
       <h2>Receive Payment to Vietnamese Bank Account</h2>
-      <img src="/api/placeholder/200/200" alt="Vietnam Bank QR Code">
+      <img src="MBBank.jpg" alt="Vietnam Bank QR Code">
       <p>Scan this QR code to send payment to my Vietnamese bank account.</p>
     </section>
     <section>
       <h2>Receive Payment via PayPal</h2>
-      <p>You can also send payment via PayPal using my username: <strong>myusername</strong></p>
+      <p>You can also send payment via PayPal using my username: <strong>@tuansave</strong></p>
       <button id="paypal-button">Send Payment</button>
     </section>
   </main>
