--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buy Me a Coffee</title>
+  <title>☕ Buy Me a Coffee</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
