--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>☕ Buy Me a Coffee</title>
+  <link rel="icon" href="icon.png" type="image/png">
+
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
