--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <main>
     <section>
       <h2>Receive USDT on Binance</h2>
-      <img src="/api/placeholder/200/200" alt="USDT QR Code">
+      <img src="Binance.jpg" alt="USDT QR Code">
       <p>Scan this QR code to send USDT to my Binance wallet.</p>
     </section>
     <section>
