--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
     <section>
       <h2>Receive Payment to Vietnamese Bank Account</h2>
-      <img src="MBBank.jpg" alt="Vietnam Bank QR Code">
+      <img src="VCB.jpg" alt="Vietnam Bank QR Code">
       <p>Scan this QR code to send payment to my Vietnamese bank account.</p>
     </section>
     <section>
